# opencv_cmake_c_plus_plus

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
app/: CMakeLists.txt  main.cc
cmake/: Debug.cmake  Docs.cmake  Warnings.cmake
docs/: Doxyfile
docs/html/: CMakeLists_8txt.html  dir_320f2315900ee548cb7db1cc36eaa590.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  my__lib_8cc.html  my__lib_8cc__incl.map  my__lib_8cc__incl.md5  my__lib_8hpp.html  my__lib_8hpp__dep__incl.map  my__lib_8hpp__dep__incl.md5  my__lib_8hpp_source.html
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
lib/my_lib/: .my_lib.cc.swp  CMakeLists.txt  my_lib.cc  my_lib.hpp
tests/: CMakeLists.txt  main.cc
